Populated w/ own material

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en"><script type="text/javascript">window["_gaUserPrefs"] = { ioo : function() { return true; } }</script><head>
+<html lang="en"><script type="text/javascript">window["_gaUserPrefs"] = { ioo : function() { return true; } }</script><head><script type="text/javascript">window["_gaUserPrefs"] = { ioo : function() { return true; } }</script>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Teletours</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -96,7 +96,7 @@
         color: #ccccff;
       }
     </style>
-  </head><script type="text/javascript">var new_nav = new function() {};var x;var old_navigator = window.navigator;for (x in navigator) {if (typeof navigator[x] == 'function') {eval("new_nav." + x + " = function() { return old_navigator." + x + "();};");} else {eval("new_nav." + x + " = navigator." + x + ";");}}new_nav.userAgent = "Mozilla/5.0 (iPhone; U; CPU iPhone OS 4_3_2 like Mac OS X; en-us) AppleWebKit/533.17.9 (KHTML, like Gecko) Version/5.0.2 Mobile/8H7 Safari/6533.18.5";new_nav.vendor = "Apple, Inc.";window.navigator = new_nav;</script>
+  <script type="text/javascript">var new_nav = new function() {};var x;var old_navigator = window.navigator;for (x in navigator) {if (typeof navigator[x] == 'function') {eval("new_nav." + x + " = function() { return old_navigator." + x + "();};");} else {eval("new_nav." + x + " = navigator." + x + ";");}}new_nav.userAgent = "Mozilla/5.0 (iPhone; U; CPU iPhone OS 4_3_2 like Mac OS X; en-us) AppleWebKit/533.17.9 (KHTML, like Gecko) Version/5.0.2 Mobile/8H7 Safari/6533.18.5";new_nav.vendor = "Apple, Inc.";window.navigator = new_nav;</script><style id="__web-inspector-hide-shortcut-style__" type="text/css">.__web-inspector-hide-shortcut__, .__web-inspector-hide-shortcut__ * { visibility: hidden !important; }</style></head>
   <body style="">
 
     <!-- Mobile-friendly navbar adapted from example. -->
@@ -109,7 +109,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Bitstarter</a>
+          <a class="brand" href="#">Teletours</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -130,14 +130,14 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>Tourism the way you want it:</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">Without the hassle!</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -197,23 +197,12 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://spectrum.ieee.org/img/double_tele-1344927350683.jpg">
         </div>
         <div class="span5 copy">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
-          </p>
-        </div>
+          <p>"Ever wish to explore the Serengeti, climb the slopes of the majetic Mount Kilimanjaro?!"<p>"Adventure is an exhilirating joy but there comes much pain and agony with it - and that's before you've even gotten on the plane. Besides the oft-debilitating cost there are other annoyances e.g. visas, immunizations, travel itineraries, etc."</p>
+  <p>"With Teletours you can skip all that! See what you want, when you want for a fraction of the time and energy!"</p>
+</div>
       </div>
 
       <div class="row-fluid section2">
@@ -233,7 +222,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://i.imgur.com/wPfWYLL.jpg?1" title="Hosted by imgur.com">
         </div>
       </div>
 
@@ -250,7 +239,7 @@
                     What does FAQ stand for?
                   </a>
                 </div>
-                <div id="collapseOne" class="accordion-body collapse">
+                <div id="collapseOne" class="accordion-body collapse" style="height: 0px;">
                   <div class="accordion-inner">
                     Frequently Asked Question.
                   </div>
@@ -262,7 +251,7 @@
                     What's a Frequently Asked Question?
                   </a>
                 </div>
-                <div id="collapseTwo" class="accordion-body collapse">
+                <div id="collapseTwo" class="accordion-body in collapse" style="height: auto;">
                   <div class="accordion-inner">
                     A question which is commonly asked by users.
                   </div>
@@ -287,5 +276,6 @@
     </div>
   
 
-</body>
-</html>
+
+
+</body></html>BB
