--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
-<html lang="en"><script type="text/javascript">window["_gaUserPrefs"] = { ioo : function() { return true; } }</script><head><script type="text/javascript">window["_gaUserPrefs"] = { ioo : function() { return true; } }</script>
-=======
-<html lang="en"><script type="text/javascript">window["_gaUserPrefs"] = { ioo : function() { return true; } }</script>
-  <head>
->>>>>>> 7652de5aa5a3ba8b350b76cb77e6214afc8787cc
+<html lang="en"><script type="text/javascript">window["_gaUserPrefs"] = { ioo : function() { return true; } }</script><head><script type="text/javascript">window["_gaUserPrefs"] = { ioo : function() { return true; } }</script><script type="text/javascript">window["_gaUserPrefs"] = { ioo : function() { return true; } }</script>
     <meta charset="utf-8">
     <title>Teletours</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -101,12 +96,7 @@
         color: #ccccff;
       }
     </style>
-<<<<<<< HEAD
   <script type="text/javascript">var new_nav = new function() {};var x;var old_navigator = window.navigator;for (x in navigator) {if (typeof navigator[x] == 'function') {eval("new_nav." + x + " = function() { return old_navigator." + x + "();};");} else {eval("new_nav." + x + " = navigator." + x + ";");}}new_nav.userAgent = "Mozilla/5.0 (iPhone; U; CPU iPhone OS 4_3_2 like Mac OS X; en-us) AppleWebKit/533.17.9 (KHTML, like Gecko) Version/5.0.2 Mobile/8H7 Safari/6533.18.5";new_nav.vendor = "Apple, Inc.";window.navigator = new_nav;</script><style id="__web-inspector-hide-shortcut-style__" type="text/css">.__web-inspector-hide-shortcut__, .__web-inspector-hide-shortcut__ * { visibility: hidden !important; }</style></head>
-=======
-  </head><script type="text/javascript">var new_nav = new function() {};var x;var old_navigator = window.navigator;for (x in navigator) {if (typeof navigator[x] == 'function') {eval("new_nav." + x + " = function() { return old_navigator." + x + "();};");} else {eval("new_nav." + x + " = navigator." + x + ";");}}new_nav.userAgent = "Mozilla/5.0 (iPhone; U; CPU iPhone OS 4_3_2 like Mac OS X; en-us) AppleWebKit/533.17.9 (KHTML, like Gecko) Version/5.0.2 Mobile/8H7 Safari/6533.18.5";new_nav.vendor = "Apple, Inc.";window.navigator = new_nav;</script>
-  
->>>>>>> 7652de5aa5a3ba8b350b76cb77e6214afc8787cc
   <body style="">
 
     <!-- Mobile-friendly navbar adapted from example. -->
@@ -210,7 +200,7 @@
           <img class="img-polaroid" src="http://spectrum.ieee.org/img/double_tele-1344927350683.jpg">
         </div>
         <div class="span5 copy">
-          <p>"Ever wish to explore the Serengeti, climb the slopes of the majetic Mount Kilimanjaro?!"<p>"Adventure is an exhilirating joy but there comes much pain and agony with it - and that's before you've even gotten on the plane. Besides the oft-debilitating cost there are other annoyances e.g. visas, immunizations, travel itineraries, etc."</p>
+          <p>"Ever wish to explore the Serengeti, climb the slopes of the majetic Mount Kilimanjaro?!"</p><p>"Adventure is an exhilirating joy but there comes much pain and agony with it - and that's before you've even gotten on the plane. Besides the oft-debilitating cost there are other annoyances e.g. visas, immunizations, travel itineraries, etc."</p>
   <p>"With Teletours you can skip all that! See what you want, when you want for a fraction of the time and energy!"</p>
 </div>
       </div>
@@ -257,11 +247,11 @@
               </div>
               <div class="accordion-group">
                 <div class="accordion-heading">
-                  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+                  <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
                     What's a Frequently Asked Question?
                   </a>
                 </div>
-                <div id="collapseTwo" class="accordion-body in collapse" style="height: auto;">
+                <div id="collapseTwo" class="accordion-body collapse" style="height: 0px;">
                   <div class="accordion-inner">
                     A question which is commonly asked by users.
                   </div>
@@ -286,11 +276,7 @@
     </div>
   
 
-<<<<<<< HEAD
 
 
-</body></html>BB
-=======
-  </body>
-</html>
->>>>>>> 7652de5aa5a3ba8b350b76cb77e6214afc8787cc
+BB
+</body></html>
