--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>p
 <html lang="en"><script type="text/javascript">window["_gaUserPrefs"] = { ioo : function() { return true; } }</script><head><script type="text/javascript">window["_gaUserPrefs"] = { ioo : function() { return true; } }</script><script type="text/javascript">window["_gaUserPrefs"] = { ioo : function() { return true; } }</script>
     <meta charset="utf-8">
     <title>Teletours</title>
@@ -137,7 +137,7 @@
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">Without the hassle!</p>
+          <p class="lead">__Without the hassle!__</p>
         </div>
       </div>
       <div class="row-fluid pitch">
