--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>p
+<!DOCTYPE html>
 <html lang="en"><script type="text/javascript">window["_gaUserPrefs"] = { ioo : function() { return true; } }</script><head><script type="text/javascript">window["_gaUserPrefs"] = { ioo : function() { return true; } }</script><script type="text/javascript">window["_gaUserPrefs"] = { ioo : function() { return true; } }</script>
     <meta charset="utf-8">
     <title>Teletours</title>
@@ -200,15 +200,15 @@
           <img class="img-polaroid" src="http://spectrum.ieee.org/img/double_tele-1344927350683.jpg">
         </div>
         <div class="span5 copy">
-          <p>"Ever wish to explore the Serengeti, climb the slopes of the majetic Mount Kilimanjaro?!"</p><p>"Adventure is an exhilirating joy but there comes much pain and agony with it - and that's before you've even gotten on the plane. Besides the oft-debilitating cost there are other annoyances e.g. visas, immunizations, travel itineraries, etc."</p>
-  <p>"With Teletours you can skip all that! See what you want, when you want for a fraction of the time and energy!"</p>
+          <p>Ever wish to explore the Serengeti, climb the slopes of the majestic Mount Kilimanjaro?!</p><p>Adventure is an exhilirating joy but there comes much pain and agony with it - and that's before you've even gotten on the plane. Besides the oft-debilitating cost there are other annoyances e.g. visas, immunizations, travel itineraries, etc.</p>
+  <p>With Teletours you can skip all that! See what you want, when you want for a fraction of the time and energy!</p>
 </div>
       </div>
 
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+            hello! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
             porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
             mollis justo velit at nunc. Fusce nec egestas sem. Donec
             fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
