Fixed staging bugs in develop branch.

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            hello! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+            Now, how is that for exciting?! With our innovative service you can have the time of your life without ever leaving your couch! dolor sit amet, consectetur adipiscing elit. Donec
             porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
             mollis justo velit at nunc. Fusce nec egestas sem. Donec
             fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
