--- a/index.html
+++ b/index.html
@@ -98,6 +98,21 @@
         color: #ccccff;
       }
     </style>
+    
+    <!-- AddThis Smart Layers BEGIN -->
+    <!-- Go to http://www.addthis.com/get/smart-layers to customize -->
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51fab3fb37a4a0e2"></script>
+    <script type="text/javascript">
+      addthis.layers({
+       'theme' : 'transparent',
+       'share' : {
+        'position' : 'right',
+        'numPreferredServices' : 6
+       }   
+      });
+    </script>
+    <!-- AddThis Smart Layers END -->
+    
   </head>
   <body>
 
