Just checking up.

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Now, how is that for exciting?! With our innovative service you can have the time of your life without ever leaving your couch!</p>
+            Now, how is that for exciting?! With our innovative service you can have the time of your life without ever leaving your couch! Yes, that's right!</p>
         </div>
         <div class="span5 asset">
           <img class="img-polaroid"  alt="The great outdoors!" src="http://i.imgur.com/wPfWYLL.jpg?1">
